Project

General

Profile

Bug #50785

multisite: full sync broken for tenanted buckets

Added by Casey Bodley almost 3 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite tenant
Backport:
octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

full sync's requests to list bucket shards use rgwx-bucket-instance to pass the tenant name. this broke at some point in zipper work


Related issues

Duplicated by rgw - Bug #53737: Ceph_Multi-Site : Data added in primary RGW while secondary RGW service is down does not get synced when secondary service comes up Duplicate
Copied to rgw - Backport #51081: pacific: multisite: full sync broken for tenanted buckets Resolved
Copied to rgw - Backport #54622: octopus: multisite: full sync broken for tenanted buckets Resolved

History

#1 Updated by Casey Bodley almost 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 41316

#2 Updated by Mule Te almost 3 years ago

Hi Casey:

I think we are having this issue now. Currently we are using octopus 15.2.10 and tenant bucket. All the old objects will not be synced into secondary cluster. Currently we are using object rewrite to force sync those old data. If your PR merges, this will help a lot.

Thanks

#3 Updated by Casey Bodley almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport

#4 Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51081: pacific: multisite: full sync broken for tenanted buckets added

#5 Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

#6 Updated by Gilles Mocellin about 2 years ago

Hello ! No chance to have a backport in Octopus ?

#7 Updated by Casey Bodley about 2 years ago

  • Status changed from Resolved to Pending Backport
  • Backport changed from pacific to octopus

apologies, i had assumed the regression was only for pacific. tagging for octopus backport

#8 Updated by Backport Bot about 2 years ago

  • Copied to Backport #54622: octopus: multisite: full sync broken for tenanted buckets added

#9 Updated by Backport Bot over 1 year ago

  • Tags changed from multisite tenant to multisite tenant backport_processed

#10 Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved

#11 Updated by Konstantin Shalygin over 1 year ago

  • Tags changed from multisite tenant backport_processed to multisite tenant

#12 Updated by Casey Bodley over 1 year ago

  • Duplicated by Bug #53737: Ceph_Multi-Site : Data added in primary RGW while secondary RGW service is down does not get synced when secondary service comes up added

Also available in: Atom PDF